# open-source-contributor-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260601_0001_initial_schema.py  2a51976806cf_add_issue_embeddings.py  5d1560981896_add_patch_columns.py  5d8541ad3fbe_add_triage_data_to_workflow_runs.py  95d9fc2f18c2_add_code_chunks_table.py  d67049aa06b8_add_preferred_language_to_workflow_runs.py
backend/app/: __init__.py  main.py
backend/app/agents/: patch_agent.py  workflow.py
backend/app/ai/providers/: anthropic.py  base.py  gemini.py  ollama.py  openrouter.py  registry.py
backend/app/api/routes/: github.py  pr_checks.py  providers.py  (+2 more)
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: audit.py  workflow.py
backend/app/schemas/: github.py  provider.py  repository.py  review.py  workflow.py
backend/app/scripts/: stale_issue_closer.py
backend/app/services/: audit.py  code_indexer.py  difficulty.py  doc_drift.py  github_bot.py  github_issues.py  impact.py  issue_indexer.py  issue_triager.py  language_service.py  onboarding.py  pr_draft.py  repository_analyzer.py  repository_clone.py  security.py  test_runner.py  visualization.py  workflow_persistence.py
backend/app/tools/: __init__.py  docker_sandbox.py  safe_executor.py
backend/tests/: test_delivery_services.py  test_github_issue_service.py  test_provider_registry.py  test_repository_analyzer.py  test_repository_clone.py  test_workflow_gates.py
(+20 files in other folders)
